# ascii_nn

./: .gitignore  LICENSE  README.md  base_ascii_module.py  bg_detection.py  pyproject.toml  test.ipynb  utilities.py
examples/: example.py
src/ascii_nn/: AsciiModule.py  __init__.py  ascii_model.py  ascii_nn.py  base_ascii_module.py  charsets.py  edge_detection.py  utilities.py
src/ascii_nn/models/: AsciiModule.py  __init__.py  conv2d_model.py  intensity_model.py  ssim_model.py
tests/: test_library.py
