[project]
name = "ascii_nn"
version = "0.0.1"
authors = [
  { name="Daniel Baranov", email="author@example.com" },
]
description = "Multiple standardized implementations of Image -> Ascii Art conversion"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"

]
license = {text = "MIT"}
dependencies = [
  "numpy",
  "Pillow",
  "torch",
  "torchvision",
  "platformdirs",
  "kornia",
]

[project.urls]
Homepage = "https://github.com/danieldbaranov/ascii_nn"
Issues = "https://github.com/danieldbaranov/ascii_nn/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"ascii_nn" = ["data/*.ttf"]

